deployment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studierlangsam-de
spec:
  rules:
    - host: '${DEV_VERSION_NAME}.dev.studierlangsam.de'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studierlangsam-de
                port:
                  name: web
  tls:
    - secretName: 'studierlangsam-de-${DEV_VERSION_NAME}-tls'
      hosts:
        - '${DEV_VERSION_NAME}.dev.studierlangsam.de'
